--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -2,12 +2,12 @@ kind: Service
 apiVersion: v1
 metadata:
 # set your user name
-  name: user16-hello-world
+  name: {{ .Chart.Name }}-service
 spec:
   ports:
     - protocol: TCP
-      port: 8080
-      targetPort: 8080
+      port: {{ .Values.service.servicePort }}
+      targetPort: {{ .Values.containers.containerPort }}
   selector:
 # set your user name
-    app: user16-hello-world
+    app: ({ .Chart.Name }}
