--- a/helm/templates/route.yaml
+++ b/helm/templates/route.yaml
@@ -2,13 +2,13 @@ kind: Route
 apiVersion: route.openshift.io/v1
 metadata:
 # set your user name
-  name:  user16-hello-world
+  name:  ({ .Chart.Name }}-route
 spec:
   to:
     kind: Service
 # set your user name
-    name:  user16-hello-world
+    name:  {{ .Chart.Name }}-service
     weight: 100
   port:
-    targetPort: 8080
+    targetPort: {{ .Values.service.servicePort }}
   wildcardPolicy: None
