--- a/Application/helm/templates/route.yaml
+++ b/Application/helm/templates/route.yaml
@@ -2,7 +2,7 @@ kind: Route
 apiVersion: route.openshift.io/v1
 metadata:
 # set your user name
-  name:  ({ .Chart.Name }}-route
+  name:  {{ .Chart.Name }}-route
 spec:
   to:
     kind: Service
