edited the HELM template for Deployment

--- a/Application/helm/values.yaml
+++ b/Application/helm/values.yaml
@@ -2,8 +2,8 @@ ReplicaNumber: 3
 
 containers:
   containerPort: 8080
-  image: 'quay.io/yogevuser16/openshift:v2'
-  tag: 'base'
+  image: 'quay.io/yogevuser16/openshift:'
+  tag: 'V2'
 
 service:
   servicePort: 8080
