edited the HELM template for Deployment

--- a/Application/helm/values.yaml
+++ b/Application/helm/values.yaml
@@ -2,7 +2,7 @@ ReplicaNumber: 3
 
 containers:
   containerPort: 8080
-  image: 'quay.io/yogevuser16/openshift:'
+  image: 'quay.io/yogevuser16/openshift'
   tag: 'V2'
 
 service:
