edited the HELM template for Deployment

--- a/Application/helm/values.yaml
+++ b/Application/helm/values.yaml
@@ -3,7 +3,7 @@ ReplicaNumber: 3
 containers:
   containerPort: 8080
   image: 'quay.io/yogevuser16/openshift'
-  tag: 'V2'
+  tag: 'v2'
 
 service:
   servicePort: 8080
