edited the HELM template for Deployment

--- a/Application/helm/templates/deployment.yaml
+++ b/Application/helm/templates/deployment.yaml
@@ -27,7 +27,7 @@ spec:
           image: {{ .Values.containers.image }}:{{ .Values.containers.tag }}
         volumeMounts:
           - name: index-html
-            mountPath: /tmp/html # this will mount the html.index file to it application location
+            mountPath: /src/html # this will mount the html.index file to it application location
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       volumes:
