--- a/Application/helm/templates/deployment.yaml
+++ b/Application/helm/templates/deployment.yaml
@@ -23,8 +23,31 @@ spec:
             - containerPort: {{ .Values.containers.containerPort }}
               protocol: TCP
           imagePullPolicy: IfNotPresent
+          readinessProbe:
+                    httpGet:
+                      path: /health/readiness # this check the application url path
+                      port: {{ .Values.containers.containerPort  }} # In which port the Application is listening
+                      scheme: HTTP
+                    initialDelaySeconds: 1 # the time is waiting befor testing the application path
+                    timeoutSeconds: 1 # the time for timeout
+                    periodSeconds: 10 # the abount of time to wait between checks
+                    successThreshold: 1 # count to decalre seccessfull 
+                    failureThreshold: 3 # count to decalre failure
+          ivenessProbe:
+                      httpGet:
+                        path: /health/liveliness
+                        port: {{ .Values.containers.containerPort }}
+                        scheme: HTTP
+                      initialDelaySeconds: 1
+                      timeoutSeconds: 1
+                      periodSeconds: 10
+                      successThreshold: 1
+                      failureThreshold: 3
+          env:
+                      - name: PORT
+                        value: {{ .Values.containers.containerPort | quote }}
 # Update with the image you build in part 1
-          image: {{ .Values.containers.image }}:{{ .Values.containers.tag }}
+          image: {{ .Values.containers.image }}: {{ .Values.containers.tag }}
           volumeMounts:
             - name: index-html
               mountPath: /tmp/html # this will mount the html.index file to it application location
