--- a/Application/sub_chart/chart.yaml
+++ b/Application/sub_chart/chart.yaml
@@ -3,13 +3,13 @@ name: workshop-test
 description: A Helm chart for Kubernetes
 type: application
 dependencies:
-  - name: 'openshift-1.0.0'
+  - name: 'openshift'
     repository: oci://ghcr.io/yogevch/helm/
     version: "1.0.0"
     alias: deploy1
-  - name: workshop-test
-    repository: "oci://ghcr.io/tal-hason/helm"
-    version: 1.0.1
+  - name: 'openshift'
+    repository: oci://ghcr.io/yogevch/helm/
+    version: "1.0.0"
     alias: deploy2
 version: 1.0.0
 appVersion: "1.0.0"
