edited the HELM template for Deployment

--- a/Application/sub_chart/values.yaml
+++ b/Application/sub_chart/values.yaml
@@ -3,19 +3,19 @@ deploy1:
 
   containers:
       containerPort: 8080
-      image: 'quay.io/argo-helm-workshop/workshop-app'
-      tag: 'chart_v2'
+      image: 'oci://ghcr.io/yogevch/helm/'
+      tag: 'deploy1'
 
   service:
       servicePort: 8080
-
+---
 deploy2: 
   ReplicaNumber: 1
 
   containers:
     containerPort: 8080
-    image: 'quay.io/argo-helm-workshop/workshop-app'
-    tag: 'chart_v2'
+    image: 'oci://ghcr.io/yogevch/helm/'
+    tag: 'deploy2'
 
   service:
     servicePort: 8080
