--- a/Application/sub_chart/chart.yaml
+++ b/Application/sub_chart/chart.yaml
@@ -4,7 +4,7 @@ description: A Helm chart for Kubernetes
 type: application
 dependencies:
   - name: 'openshift'
-    repository: ghcr.io/yogevch/helm
+    repository: oci://ghcr.io/yogevch/helm
     version: "1.0.0"
     alias: deploy1
 version: 1.0.0
