--- a/Application/sub_chart/Chart.yaml
+++ b/Application/sub_chart/Chart.yaml
@@ -7,5 +7,9 @@ dependencies:
     repository: oci://ghcr.io/yogevch/helm
     version: "1.0.0"
     alias: deploy1
+  - name: workshop-test
+    repository: oci://ghcr.io/yogevch/helm
+    version: 1.0.1
+    alias: deploy2
 version: 1.0.0
 appVersion: "1.0.0"
