--- a/Application/sub_chart/Chart.yaml
+++ b/Application/sub_chart/Chart.yaml
@@ -7,7 +7,7 @@ dependencies:
     repository: oci://ghcr.io/yogevch/helm
     version: "1.0.0"
     alias: deploy1
-  - name: workshop-test
+  - name: 'openshift'
     repository: oci://ghcr.io/yogevch/helm
     version: 1.0.1
     alias: deploy2
