--- a/Application/sub_chart/Chart.yaml
+++ b/Application/sub_chart/Chart.yaml
@@ -4,12 +4,12 @@ description: A Helm chart for Kubernetes
 type: application
 dependencies:
   - name: 'openshift'
-    repository: oci://ghcr.io/yogevch/helm
+    repository: oci://ghcr.io/yogevch/helm/
     version: "1.0.0"
     alias: deploy1
   - name: 'openshift'
-    repository: oci://ghcr.io/yogevch/helm
-    version: 1.0.1
+    repository: oci://ghcr.io/yogevch/helm/
+    version: "1.0.1"
     alias: deploy2
 version: 1.0.0
 appVersion: "1.0.0"
