--- a/Application/helm/templates/deployment.yaml
+++ b/Application/helm/templates/deployment.yaml
@@ -25,24 +25,24 @@ spec:
           imagePullPolicy: IfNotPresent
           readinessProbe:
             httpGet:
-              path: /health/readiness # this check the application url path
+              path: {{ .Values.probes.readiness.path }} # this check the application url path
               port: {{ .Values.containers.containerPort  }} # In which port the Application is listening
               scheme: HTTP
-            initialDelaySeconds: 1 # the time is waiting befor testing the application path
-            timeoutSeconds: 1 # the time for timeout
-            periodSeconds: 10 # the abount of time to wait between checks
-            successThreshold: 1 # count to decalre seccessfull 
-            failureThreshold: 3 # count to decalre failure
+            initialDelaySeconds: {{ .Values.probes.readiness.initialDelaySeconds }} # the time is waiting befor testing the application path
+            timeoutSeconds: {{ .Values.probes.readiness.timeoutSeconds }} # the time for timeout
+            periodSeconds: {{ .Values.probes.readiness.periodSeconds }} # the abount of time to wait between checks
+            successThreshold: {{ .Values.probes.readiness.successThreshold }} # count to decalre seccessfull 
+            failureThreshold: {{ .Values.probes.readiness.failureThreshold }} # count to decalre failure
           livenessProbe:
             httpGet:
-              path: /health/liveliness
+              path: {{ .Values.probes.liveness.path }}
               port: {{ .Values.containers.containerPort }}
               scheme: HTTP
-            initialDelaySeconds: 1
-            timeoutSeconds: 1
-            periodSeconds: 10
-            successThreshold: 1
-            failureThreshold: 3
+            initialDelaySeconds: {{ .Values.probes.liveness.initialDelaySeconds }}
+            timeoutSeconds: {{ .Values.probes.liveness.timeoutSeconds }}
+            periodSeconds: {{ .Values.probes.liveness.periodSeconds }}
+            successThreshold: {{ .Values.probes.liveness.successThreshold }}
+            failureThreshold: {{ .Values.probes.liveness.failureThreshold }}
           env:
           - name: PORT
             value: {{ .Values.containers.containerPort | quote }}
@@ -50,7 +50,7 @@ spec:
           image: {{ .Values.containers.image }}:{{ .Values.containers.tag }}
           volumeMounts:
             - name: index-html
-              mountPath: /tmp/html # this will mount the html.index file to it application location
+              mountPath: {{ .Values.volume.mount.path }} # this will mount the html.index file to it application location
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       volumes:
