--- a/Application/helm/values.yaml
+++ b/Application/helm/values.yaml
@@ -7,3 +7,27 @@ containers:
 
 service:
   servicePort: 8080
+
+probes:
+  readiness:
+    path: /health/readiness
+    initialDelaySeconds: 1
+    timeoutSeconds: 1
+    periodSeconds: 10
+    successThreshold: 1
+    failureThreshold: 3
+  liveness:
+    path: /health/liveliness
+    initialDelaySeconds: 1
+    timeoutSeconds: 1
+    periodSeconds: 10
+    successThreshold: 1
+    failureThreshold: 3
+volume:
+  mount:
+    path: /tmp/html
+
+
+
+
+
